--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     socket.onopen = function() {
       console.log("Соединение установлено.");
-    	socket.send("message");
+    	socket.send("Hello world");
     };
 
 
