--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
   </body>
   <script>
-    var socket = new WebSocket("ws://127.0.0.1:8080?dddd=1&fsfsd=f%26 fΩf+f");
+    var socket = new WebSocket("wss://127.0.0.1:8080?dddd=1&fsfsd=f%26 fΩf+f");
 
     socket.onopen = function() {
       console.log("Соединение установлено.");
